fixed spacing

--- a/main.css
+++ b/main.css
@@ -338,7 +338,6 @@ padding-bottom: 120px
   height: 100%;
   position: fixed;
   top: 50%;
-  left: 50%;
 }
 
 .main-section, .main-intro {
